Fix: global styles don`t reload the browser when change.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,5 +19,5 @@
 @import "niduscss-elements-link";
 @import "niduscss-elements-typography";
 
-/* Shared styles
+/* Global styles
    ========================================================================== */
