[6.0.0] Integrate with angular-cli.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -51,6 +51,11 @@ body {
 
   /* Visual */
   background-color: transparent;
+
+  /* Prevent font-family asigment of normalize.css */
+  * {
+    font-family: inherit;
+  }
 }
 
 /* Images
